crates/k-rust/tests/snapshots/inner_config__parses_chained_casts_and_empty_bags.snap
---
source: crates/k-rust/tests/inner_config.rs
description: "Configuration bubble:\n\n<top><k> $PGM:Int:K </k><cells> .Bag </cells></top>"
---
Configuration {
    body: Apply {
        label: Label {
            name: "#configCell",
            parameters: [],
        },
        arguments: [
            Token {
                token: "top",
                sort: Sort {
                    name: "#CellName",
                    parameters: [],
                },
            },
            Apply {
                label: Label {
                    name: "#cellPropertyListTerminator",
                    parameters: [],
                },
                arguments: [],
            },
            Apply {
                label: Label {
                    name: "#cells",
                    parameters: [],
                },
                arguments: [
                    Apply {
                        label: Label {
                            name: "#configCell",
                            parameters: [],
                        },
                        arguments: [
                            Token {
                                token: "k",
                                sort: Sort {
                                    name: "#CellName",
                                    parameters: [],
                                },
                            },
                            Apply {
                                label: Label {
                                    name: "#cellPropertyListTerminator",
                                    parameters: [],
                                },
                                arguments: [],
                            },
                            Apply {
                                label: Label {
                                    name: "#SemanticCastToK",
                                    parameters: [],
                                },
                                arguments: [
                                    Apply {
                                        label: Label {
                                            name: "#SemanticCastToInt",
                                            parameters: [],
                                        },
                                        arguments: [
                                            Token {
                                                token: "$PGM",
                                                sort: Sort {
                                                    name: "KConfigVar",
                                                    parameters: [],
                                                },
                                            },
                                        ],
                                    },
                                ],
                            },
                            Token {
                                token: "k",
                                sort: Sort {
                                    name: "#CellName",
                                    parameters: [],
                                },
                            },
                        ],
                    },
                    Apply {
                        label: Label {
                            name: "#configCell",
                            parameters: [],
                        },
                        arguments: [
                            Token {
                                token: "cells",
                                sort: Sort {
                                    name: "#CellName",
                                    parameters: [],
                                },
                            },
                            Apply {
                                label: Label {
                                    name: "#cellPropertyListTerminator",
                                    parameters: [],
                                },
                                arguments: [],
                            },
                            Apply {
                                label: Label {
                                    name: "#cells",
                                    parameters: [],
                                },
                                arguments: [],
                            },
                            Token {
                                token: "cells",
                                sort: Sort {
                                    name: "#CellName",
                                    parameters: [],
                                },
                            },
                        ],
                    },
                ],
            },
            Token {
                token: "top",
                sort: Sort {
                    name: "#CellName",
                    parameters: [],
                },
            },
        ],
    },
    ensures: Token {
        token: "true",
        sort: Sort {
            name: "Bool",
            parameters: [],
        },
    },
    attributes: Attributes {
        entries: {},
    },
}
