crates/k-rust/tests/snapshots/inner_config__parses_k_sequences_in_configuration_cells.snap
---
source: crates/k-rust/tests/inner_config.rs
description: "Configuration bubble:\n\n<k> foo ~> $PGM:Int </k>"
---
Configuration {
    body: Apply {
        label: Label {
            name: "#configCell",
            parameters: [],
        },
        arguments: [
            Token {
                token: "k",
                sort: Sort {
                    name: "#CellName",
                    parameters: [],
                },
            },
            Apply {
                label: Label {
                    name: "#cellPropertyListTerminator",
                    parameters: [],
                },
                arguments: [],
            },
            Sequence(
                [
                    Apply {
                        label: Label {
                            name: "foo",
                            parameters: [],
                        },
                        arguments: [],
                    },
                    Apply {
                        label: Label {
                            name: "#SemanticCastToInt",
                            parameters: [],
                        },
                        arguments: [
                            Token {
                                token: "$PGM",
                                sort: Sort {
                                    name: "KConfigVar",
                                    parameters: [],
                                },
                            },
                        ],
                    },
                ],
            ),
            Token {
                token: "k",
                sort: Sort {
                    name: "#CellName",
                    parameters: [],
                },
            },
        ],
    },
    ensures: Token {
        token: "true",
        sort: Sort {
            name: "Bool",
            parameters: [],
        },
    },
    attributes: Attributes {
        entries: {},
    },
}
