crates/k-rust/tests/snapshots/inner_config__parses_literal_cell_names_that_are_also_user_terminals.snap
---
source: crates/k-rust/tests/inner_config.rs
description: "Configuration bubble:\n\n<value> .K </value>"
---
Configuration {
    body: Apply {
        label: Label {
            name: "#configCell",
            parameters: [],
        },
        arguments: [
            Token {
                token: "value",
                sort: Sort {
                    name: "#CellName",
                    parameters: [],
                },
            },
            Apply {
                label: Label {
                    name: "#cellPropertyListTerminator",
                    parameters: [],
                },
                arguments: [],
            },
            Sequence(
                [],
            ),
            Token {
                token: "value",
                sort: Sort {
                    name: "#CellName",
                    parameters: [],
                },
            },
        ],
    },
    ensures: Token {
        token: "true",
        sort: Sort {
            name: "Bool",
            parameters: [],
        },
    },
    attributes: Attributes {
        entries: {},
    },
}
