crates/k-rust/tests/snapshots/inner_config__parses_nested_cells_properties_casts_and_ensures.snap
---
source: crates/k-rust/tests/inner_config.rs
expression: transformed
---
Definition {
    main_module: "MAIN",
    modules: [
        FlatModule {
            name: "MAIN",
            imports: [],
            local_sentences: [
                Production {
                    label: None,
                    parameters: [],
                    sort: Sort {
                        name: "Int",
                        parameters: [],
                    },
                    items: [
                        RegexTerminal {
                            precede_regex: None,
                            regex: "[0-9]+",
                            follow_regex: None,
                        },
                    ],
                    attributes: Attributes {
                        entries: {
                            "token": String(""),
                        },
                    },
                },
                Configuration {
                    body: Apply {
                        label: Label {
                            name: "#configCell",
                            parameters: [],
                        },
                        arguments: [
                            Token {
                                token: "top",
                                sort: Sort {
                                    name: "#CellName",
                                    parameters: [],
                                },
                            },
                            Apply {
                                label: Label {
                                    name: "#cellPropertyList",
                                    parameters: [],
                                },
                                arguments: [
                                    Apply {
                                        label: Label {
                                            name: "#cellProperty",
                                            parameters: [],
                                        },
                                        arguments: [
                                            Token {
                                                token: "multiplicity",
                                                sort: Sort {
                                                    name: "#CellName",
                                                    parameters: [],
                                                },
                                            },
                                            Token {
                                                token: "\"1\"",
                                                sort: Sort {
                                                    name: "KString",
                                                    parameters: [],
                                                },
                                            },
                                        ],
                                    },
                                    Apply {
                                        label: Label {
                                            name: "#cellPropertyListTerminator",
                                            parameters: [],
                                        },
                                        arguments: [],
                                    },
                                ],
                            },
                            Apply {
                                label: Label {
                                    name: "#cells",
                                    parameters: [],
                                },
                                arguments: [
                                    Apply {
                                        label: Label {
                                            name: "#configCell",
                                            parameters: [],
                                        },
                                        arguments: [
                                            Token {
                                                token: "k",
                                                sort: Sort {
                                                    name: "#CellName",
                                                    parameters: [],
                                                },
                                            },
                                            Apply {
                                                label: Label {
                                                    name: "#cellPropertyListTerminator",
                                                    parameters: [],
                                                },
                                                arguments: [],
                                            },
                                            Apply {
                                                label: Label {
                                                    name: "#SemanticCastToInt",
                                                    parameters: [],
                                                },
                                                arguments: [
                                                    Token {
                                                        token: "$PGM",
                                                        sort: Sort {
                                                            name: "KConfigVar",
                                                            parameters: [],
                                                        },
                                                    },
                                                ],
                                            },
                                            Token {
                                                token: "k",
                                                sort: Sort {
                                                    name: "#CellName",
                                                    parameters: [],
                                                },
                                            },
                                        ],
                                    },
                                    Apply {
                                        label: Label {
                                            name: "#configCell",
                                            parameters: [],
                                        },
                                        arguments: [
                                            Token {
                                                token: "counter",
                                                sort: Sort {
                                                    name: "#CellName",
                                                    parameters: [],
                                                },
                                            },
                                            Apply {
                                                label: Label {
                                                    name: "#cellPropertyListTerminator",
                                                    parameters: [],
                                                },
                                                arguments: [],
                                            },
                                            Token {
                                                token: "0",
                                                sort: Sort {
                                                    name: "Int",
                                                    parameters: [],
                                                },
                                            },
                                            Token {
                                                token: "counter",
                                                sort: Sort {
                                                    name: "#CellName",
                                                    parameters: [],
                                                },
                                            },
                                        ],
                                    },
                                ],
                            },
                            Token {
                                token: "top",
                                sort: Sort {
                                    name: "#CellName",
                                    parameters: [],
                                },
                            },
                        ],
                    },
                    ensures: Token {
                        token: "true",
                        sort: Sort {
                            name: "Bool",
                            parameters: [],
                        },
                    },
                    attributes: Attributes {
                        entries: {},
                    },
                },
            ],
            attributes: Attributes {
                entries: {},
            },
        },
    ],
    attributes: Attributes {
        entries: {},
    },
}
